--- a/算法模型：朴素贝叶斯.md
+++ b/算法模型：朴素贝叶斯.md
@@ -15,7 +15,8 @@
 - 对数据的表达形式很敏感。
 - 需要知道先验概率（常取决于假设），因此存在一定误差。
 
-`sklearn.naive_bayes`中有以下朴素贝叶斯分类算法：
+## 模型
+#### `sklearn.naive_bayes`中有以下朴素贝叶斯分类算法：
 - 高斯朴素贝叶斯 [GaussianNB](http://scikit-learn.org/dev/modules/generated/sklearn.naive_bayes.GaussianNB.html)
 - 多项式朴素贝叶斯 [MultinomialNB](http://scikit-learn.org/dev/modules/generated/sklearn.naive_bayes.MultinomialNB.html)
 - 伯努利朴素贝叶斯 [BernoulliNB](http://scikit-learn.org/dev/modules/generated/sklearn.naive_bayes.BernoulliNB.html)
